docs-archive/apache-airflow-providers-snowflake/6.8.1/_sources/_api/airflow/providers/snowflake/hooks/snowflake/index.rst.txt
airflow.providers.snowflake.hooks.snowflake
===========================================

.. py:module:: airflow.providers.snowflake.hooks.snowflake


Attributes
----------

.. autoapisummary::

   airflow.providers.snowflake.hooks.snowflake.T


Classes
-------

.. autoapisummary::

   airflow.providers.snowflake.hooks.snowflake.SnowflakeHook


Module Contents
---------------

.. py:data:: T

.. py:class:: SnowflakeHook(*args, **kwargs)

   Bases: :py:obj:`airflow.providers.common.sql.hooks.sql.DbApiHook`


   A client to interact with Snowflake.

   This hook requires the snowflake_conn_id connection. The snowflake account, login,
   and, password field must be setup in the connection. Other inputs can be defined
   in the connection or hook instantiation.

   :param snowflake_conn_id: Reference to
       :ref:`Snowflake connection id<howto/connection:snowflake>`
   :param account: snowflake account name
   :param authenticator: authenticator for Snowflake.
       'snowflake' (default) to use the internal Snowflake authenticator
       'externalbrowser' to authenticate using your web browser and
       Okta, ADFS or any other SAML 2.0-compliant identify provider
       (IdP) that has been defined for your account
       ``https://<your_okta_account_name>.okta.com`` to authenticate
       through native Okta.
   :param warehouse: name of snowflake warehouse
   :param database: name of snowflake database
   :param region: name of snowflake region
   :param role: name of snowflake role
   :param schema: name of snowflake schema
   :param session_parameters: You can set session-level parameters at
       the time you connect to Snowflake
   :param insecure_mode: Turns off OCSP certificate checks.
       For details, see: `How To: Turn Off OCSP Checking in Snowflake Client Drivers - Snowflake Community
       <https://community.snowflake.com/s/article/How-to-turn-off-OCSP-checking-in-Snowflake-client-drivers>`__

   .. note::
       ``get_sqlalchemy_engine()`` depends on ``snowflake-sqlalchemy``



   .. py:attribute:: conn_name_attr
      :value: 'snowflake_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'snowflake_default'



   .. py:attribute:: conn_type
      :value: 'snowflake'



   .. py:attribute:: hook_name
      :value: 'Snowflake'



   .. py:attribute:: supports_autocommit
      :value: True



   .. py:attribute:: default_azure_oauth_scope
      :value: 'api://snowflake_oauth_server/.default'



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to connection form.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:attribute:: account


   .. py:attribute:: warehouse


   .. py:attribute:: database


   .. py:attribute:: region


   .. py:attribute:: role


   .. py:attribute:: schema


   .. py:attribute:: authenticator


   .. py:attribute:: session_parameters


   .. py:attribute:: client_request_mfa_token


   .. py:attribute:: client_store_temporary_credential


   .. py:attribute:: query_ids
      :type:  list[str]
      :value: []



   .. py:property:: account_identifier
      :type: str


      Get snowflake account identifier.



   .. py:method:: get_oauth_token(conn_config = None, token_endpoint = None, grant_type = 'refresh_token')

      Generate temporary OAuth access token using refresh token in connection details.



   .. py:method:: get_azure_oauth_token(azure_conn_id)

      Generate OAuth access token using Azure connection id.

      This uses AzureBaseHook on the connection id to retrieve the token. Scope for the OAuth token can be
      set in the config option ``azure_oauth_scope`` under the section ``[snowflake]``.

      :param azure_conn_id: The connection id for the Azure connection that will be used to fetch the token.
      :raises AttributeError: If AzureBaseHook does not have a get_token method which happens when
          package apache-airflow-providers-microsoft-azure<12.8.0.
      :returns: The OAuth access token string.



   .. py:method:: get_uri()

      Override DbApiHook get_uri method for get_sqlalchemy_engine().



   .. py:method:: get_conn()

      Return a snowflake.connection object.



   .. py:method:: get_sqlalchemy_engine(engine_kwargs=None)

      Get an sqlalchemy_engine object.

      :param engine_kwargs: Kwargs used in :func:`~sqlalchemy.create_engine`.
      :return: the created engine.



   .. py:method:: get_snowpark_session()

      Get a Snowpark session object.

      :return: the created session.



   .. py:method:: set_autocommit(conn, autocommit)

      Set the autocommit flag on the connection.



   .. py:method:: get_autocommit(conn)

      Get autocommit setting for the provided connection.

      :param conn: Connection to get autocommit setting from.
      :return: connection autocommit setting. True if ``autocommit`` is set
          to True on the connection. False if it is either not set, set to
          False, or the connection does not support auto-commit.



   .. py:method:: run(sql: str | collections.abc.Iterable[str], autocommit: bool = ..., parameters: collections.abc.Iterable | collections.abc.Mapping[str, Any] | None = ..., handler: None = ..., split_statements: bool = ..., return_last: bool = ..., return_dictionaries: bool = ...) -> None
                  run(sql: str | collections.abc.Iterable[str], autocommit: bool = ..., parameters: collections.abc.Iterable | collections.abc.Mapping[str, Any] | None = ..., handler: collections.abc.Callable[[Any], T] = ..., split_statements: bool = ..., return_last: bool = ..., return_dictionaries: bool = ...) -> tuple | list[tuple] | list[list[tuple] | tuple] | None

      Run a command or list of commands.

      Pass a list of SQL statements to the SQL parameter to get them to
      execute sequentially. The result of the queries is returned if the
      ``handler`` callable is set.

      :param sql: The SQL string to be executed with possibly multiple
          statements, or a list of sql statements to execute
      :param autocommit: What to set the connection's autocommit setting to
          before executing the query.
      :param parameters: The parameters to render the SQL query with.
      :param handler: The result handler which is called with the result of
          each statement.
      :param split_statements: Whether to split a single SQL string into
          statements and run separately
      :param return_last: Whether to return result for only last statement or
          for all after split.
      :param return_dictionaries: Whether to return dictionaries rather than
          regular DBAPI sequences as rows in the result. The dictionaries are
          of form ``{ 'column1_name': value1, 'column2_name': value2 ... }``.
      :return: Result of the last SQL statement if *handler* is set.
          *None* otherwise.



   .. py:method:: get_openlineage_database_info(connection)

      Return database specific information needed to generate and parse lineage metadata.

      This includes information helpful for constructing information schema query
      and creating correct namespace.

      :param connection: Airflow connection to reduce calls of `get_connection` method



   .. py:method:: get_openlineage_database_dialect(_)

      Return database dialect used for SQL parsing.

      For a list of supported dialects check: https://openlineage.io/docs/development/sql#sql-dialects



   .. py:method:: get_openlineage_default_schema()

      Return default schema specific to database.

      .. seealso::
          - :class:`airflow.providers.openlineage.sqlparser.SQLParser`



   .. py:method:: get_openlineage_database_specific_lineage(task_instance)

      Emit separate OpenLineage events for each Snowflake query, based on executed query IDs.

      If a single query ID is present, also add an `ExternalQueryRunFacet` to the returned lineage metadata.

      Note that `get_openlineage_database_specific_lineage` is usually called after task's execution,
      so if multiple query IDs are present, both START and COMPLETE event for each query will be emitted
      after task's execution. If we are able to query Snowflake for query execution metadata,
      query event times will correspond to actual query's start and finish times.

      Args:
          task_instance: The Airflow TaskInstance object for which lineage is being collected.

      Returns:
          An `OperatorLineage` object if a single query ID is found; otherwise `None`.



